<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">
        <ListPreference
            android:defaultValue="Auto"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/privacy_policy_url" />
        </Preference>
        <Preference android:title="@string/open_source_licences">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
                android:targetPackage="com.maxpoliakov.skillapp" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
