<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.maxpoliakov.skillapp.shared.extensions.FormattingKt" />

        <variable
            name="viewModel"
            type="com.maxpoliakov.skillapp.ui.backup.google_drive.GoogleDriveBackupViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="20dp"
            app:visible="@{viewModel.currentUser != null}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    style="@style/Widget.SkillApp.RoundButton.CompletelyRounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:enabled="@{!viewModel.isCreatingBackup}"
                    android:onClick="@{() -> viewModel.createBackup()}"
                    android:paddingStart="20dp"
                    android:paddingEnd="24dp"
                    android:text="@string/backup_to_google_drive"
                    app:icon="@drawable/ic_drive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/auto_backup_message"
                    android:textAlignment="center" />

                <include
                    android:id="@+id/restore_account"
                    layout="@layout/backup_section"
                    app:onClick="@{() -> viewModel.goToRestore()}"
                    app:subtitle="@{FormattingKt.format(viewModel.lastBackupState, context)}"
                    app:title="@{@string/restore}" />

                <include
                    android:id="@+id/account_section"
                    layout="@layout/backup_section"
                    android:onClick="@{() -> viewModel.showLogoutDialog()}"
                    app:label="@{@string/logout}"
                    app:subtitle="@{viewModel.currentUser.email}"
                    app:title="@{@string/account}" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:visible="@{viewModel.currentUser == null}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:paddingHorizontal="16dp"
                android:text="@string/backup_sign_in_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:onClick="@{() -> viewModel.signIn()}"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp"
                android:text="@string/google_sign_in_btn_text"
                android:textColor="@android:color/black"
                app:backgroundTint="@android:color/white"
                app:icon="@drawable/ic_google_sign_in_logo"
                app:iconGravity="textStart"
                app:iconPadding="20dp"
                app:iconSize="18dp"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                app:rippleColor="#bbb" />
        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:visible="@{viewModel.isCreatingBackup}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
